<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/monday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/tuesday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/wednesday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/thursday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/friday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/saturday" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/sunday" />
    </RadioGroup>

</LinearLayout>